# kraken-coding-challenge

./: Cargo.toml  README.md
src/: account.rs  decimal.rs  engine.rs  error.rs  lib.rs  main.rs  transaction.rs
tests/: edge_cases_test.rs  integration_test.rs
tests/data/: expected_b.csv  expected_c.csv  expected_d.csv  real_test_input.csv  real_test_output.csv  sample_b_dispute.csv  sample_c_whitespace.csv  sample_d_edge_cases.csv
