[package]
name = "payments-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A streaming Rust CLI that processes payment transactions and outputs final client account states"
repository = "https://github.com/example/payments-engine"
keywords = ["payments", "csv", "transactions", "cli", "streaming"]
categories = ["command-line-utilities", "finance"]

[dependencies]
csv = "1.3"
log = "0.4"
env_logger = "0.10"
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[[bin]]
name = "payments-engine"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
